# grzegorz-clients

./: .envrc  .gitignore  LICENSE  README.md  api.py  config.py  default_config.py  dev.sh  flake.nix  gui.py  main.py  pyproject.toml  requirements.txt  utils.py
grzegorz_clients/: __init__.py  __main__.py  api.py  cli.py  colors.py  constants.py  gui.py  gzregorz.tcss  remi_ui.py  tui.py  utils.py
grzegorz_clients/res/: style.css
