[tool.poetry]
name = "grzegorz-clients"
version = "0.2.0"
description = "Various clients to interact with the Grzegorz REST API"
authors = ["Peder Bergebakken Sundt <pbsds@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
remi = "1.0"
requests = ">=2.27.1,<3"
typer = ">=0.4.0"
urllib3 = "^1.26.17"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["all"], version = "^1.5.0"}

[tool.poetry.scripts]
grzegorz-webui = "grzegorz_clients.__main__:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
